<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="comalcaj.barbroslokaltrafik.ArtActivity">


    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="551dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textViewArtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ArtWindowTitle"
            android:textSize="30sp"
            android:textColor="#000000"/>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonImage1"
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:background="@drawable/cuckoo_clock550x200" />

                    <TextView
                        android:id="@+id/textViewImageDesc1"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/konstDesc1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonImage2"
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:background="@drawable/andetagochfotfaste" />

                    <TextView
                        android:id="@+id/textViewImageDesc2"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/konstDesc2" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonImage3"
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:background="@drawable/ladivinacommedia" />

                    <TextView
                        android:id="@+id/textViewImageDesc3"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/konstDesc3" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonImage4"
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:background="@drawable/moaritisk_absorbent_550x200" />

                    <TextView
                        android:id="@+id/textViewImageDesc4"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/konstDesc4" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonImage5"
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:background="@drawable/pendlarkatedralen" />

                    <TextView
                        android:id="@+id/textViewImageDesc5"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/konstDesc5" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonImage6"
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:background="@drawable/skies" />

                    <TextView
                        android:id="@+id/textViewImageDesc6"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/konstDesc6" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonImage7"
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:background="@drawable/stadtradang" />

                    <TextView
                        android:id="@+id/textViewImageDesc7"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/konstDesc7" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonImage8"
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:background="@drawable/vardagenssal" />

                    <TextView
                        android:id="@+id/textViewImageDesc8"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/konstDesc8" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textViewOtherstationTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textColor="#000000"
                    android:text="@string/OtherStationTitle" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonImage9"
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:background="@drawable/itinerary" />

                    <TextView
                        android:id="@+id/textViewImageDesc9"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/konstDesc9" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonImage10"
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:background="@drawable/lank_550x200" />

                    <TextView
                        android:id="@+id/textViewImageDesc10"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/konstDesc10" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonImage11"
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:background="@drawable/life_line" />

                    <TextView
                        android:id="@+id/textViewImageDesc11"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/konstDesc11" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonImage12"
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:background="@drawable/odens_tradgord" />

                    <TextView
                        android:id="@+id/textViewImageDesc12"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/konstDesc12" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonImage13"
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:background="@drawable/rorlig_rymd" />

                    <TextView
                        android:id="@+id/textViewImageDesc13"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/konstDesc13" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonImage14"
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:background="@drawable/voyage_275x100" />

                    <TextView
                        android:id="@+id/textViewImageDesc14"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/konstDesc14" />
                </LinearLayout>


            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
